<resources>
    <string name="app_name">AppTension</string>
    <string name="lbl_name">Nombre</string>
    <string name="lbl_last_name">Apellido</string>
    <string name="lbl_tension_sistole">Sístole</string>
    <string name="lbl_tension_diastole">Diástole</string>
    <string name="lbl_num_segsoc">Nº Seguridad Social</string>
    <string name="title_activity_menu">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
